# egy-maint-scraper

./: .env.example  .gitignore  Dockerfile  README.md  SOURCES_NOTES.md  pyproject.toml  requirements.txt
src/: cli.py
src/egy_maint_scraper/: aggregator.py  config.py  http_client.py  utils.py
src/egy_maint_scraper/sources/: base.py  example_directory.py
